--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -3,7 +3,12 @@
   <div class="content">
 
     <div class="mr-lg-32" fxFlex="100" *ngIf="account">
-
+      <mat-toolbar-row *ngIf="!account.confirmed && settings.welcomeMessageHiddenFrom.indexOf(account.account) === -1">
+        <mat-icon>card_giftcard</mat-icon>
+        <span>{{ 'welcome_to_burst' | i18n }} <a href="http://faucet.burst-alliance.org:8080" target="_blank">{{ 'click_to_claim' | i18n }}</a></span>
+        <span class="spacer"></span>
+        <mat-icon (click)="closeWelcomeNotification()" class="close">close</mat-icon>
+      </mat-toolbar-row>
 
       <div fxLayout="column" fxLayoutAlign="start" fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="start start">
         <div class="widget" fxFlex="100" fxFlex.gt-sm="40" fxFlex.gt-md="60">
