--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -39,7 +39,7 @@
   <ng-container matColumnDef="type">
     <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      {{ getTransactionNameFromType(transaction, account) | i18n }}
+      {{ getTransactionNameFromType(transaction) | i18n }}
     </mat-cell>
   </ng-container>
 
