--- a/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
@@ -70,7 +70,9 @@
                 <div matSubheader>No results found.</div>
 
                 <div class="new-message">
-                    <a (click)="startMessage()">Compose a new message.</a>
+                  <button class="mr-8" mat-raised-button mat-button color="primary"
+                          (click)="startMessage()">Compose a new message
+                  </button>
                 </div>
             </div>
 
