--- a/web/angular-wallet/src/app/main/messages/messages.component.html
+++ b/web/angular-wallet/src/app/main/messages/messages.component.html
@@ -1,43 +1,26 @@
 <div id="messages" class="page-layout carded fullwidth inner-scroll">
 
-    <!-- TOP BACKGROUND -->
-    <div class="top-bg accent"></div>
-    <!-- / TOP BACKGROUND -->
+  <div class="top-bg accent"></div>
 
-    <!-- CENTER -->
-    <div class="center">
-
-        <!-- CONTENT CARD -->
-        <div class="content-card">
-
-            <mat-sidenav-container>
-
-                <!-- LEFT SIDENAV -->
-                <mat-sidenav class="sidenav" position="start" opened="true" mode="side"
-                             fuseMatSidenavHelper="message-left-sidenav" matIsLockedOpen="gt-md">
-                    <message-left-sidenav></message-left-sidenav>
-                </mat-sidenav>
-                <!-- / LEFT SIDENAV -->
-
-                <!-- CONTENT -->
-                <message-start *ngIf="!selectedMessage"></message-start>
-
-                <message-view *ngIf="selectedMessage" [feeNQT]="rightSidenav && rightSidenav.options && rightSidenav.options.feeNQT"></message-view>
-                <!-- / CONTENT -->
-
-                <!-- RIGHT SIDENAV -->
-                <mat-sidenav class="sidenav" position="end" opened="false" mode="over"
-                             fuseMatSidenavHelper="message-right-sidenav">
-                    <message-right-sidenav [fees]="fees" [(feeNQT)]="feeNQT"></message-right-sidenav>
-                </mat-sidenav>
-                <!-- / RIGHT SIDENAV -->
-
-            </mat-sidenav-container>
-
-        </div>
-        <!-- / CONTENT CARD -->
-
+  <div class="center">
+    <div class="content-card">
+      <mat-sidenav-container>
+        <mat-sidenav class="sidenav" position="start" opened="true" mode="side"
+                     fuseMatSidenavHelper="message-left-sidenav" matIsLockedOpen="gt-md">
+          <message-left-sidenav></message-left-sidenav>
+        </mat-sidenav>
+        <message-start *ngIf="!selectedMessage"></message-start>
+        <message-view *ngIf="selectedMessage"
+                      [feeNQT]="rightSidenav && rightSidenav.options && rightSidenav.options.feeNQT"
+                      [encrypt]="rightSidenav && rightSidenav.options && rightSidenav.options.encrypt"
+        >
+        </message-view>
+        <mat-sidenav class="sidenav" position="end" opened="false" mode="over"
+                     fuseMatSidenavHelper="message-right-sidenav">
+          <message-right-sidenav [fees]="fees"></message-right-sidenav>
+        </mat-sidenav>
+      </mat-sidenav-container>
     </div>
-    <!-- / CENTER -->
+  </div>
 
 </div>
