--- a/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
@@ -1,26 +1,14 @@
-<!-- SIDENAV HEADER -->
 <div class="sidenav-header" *ngIf="options">
-
-  <!-- CONTACT TOOLBAR -->
   <mat-toolbar class="accent">
-
-    <!-- TOOLBAR TOP -->
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-
       <div>Options</div>
-
       <button mat-icon-button fuseMatSidenavToggler="message-right-sidenav" aria-label="close">
         <mat-icon>close</mat-icon>
       </button>
-
     </mat-toolbar-row>
-    <!-- / TOOLBAR TOP -->
-
   </mat-toolbar>
-  <!-- / CONTACT TOOLBAR -->
 </div>
 
-<!-- SIDENAV CONTENT -->
 <div class="sidenav-content py-32 px-24" fxFlex fxLayout="column" *ngIf="options">
   <label>Fee</label>
   <div class="mat-form-field">
@@ -34,11 +22,13 @@
   </div>
 
   <div class="mat-form-field">
-    <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+    <burst-fee-selector
+      [fees]="fees"
+      [(feeNQT)]="feeNQT"
+    ></burst-fee-selector>
   </div>
 
   <div class="mat-form-field mt-16">
-    <mat-checkbox [(ngModel)]="encrypt"
-                  (ngModelChange)="onEncryptionChange($event)">{{ "encrypt_message" | i18n }}</mat-checkbox>
+    <mat-checkbox [(ngModel)]="encrypt">{{ "encrypt_message" | i18n }}</mat-checkbox>
   </div>
 </div>
