--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -48,7 +48,9 @@
       <mat-icon>local_atm</mat-icon>
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      {{getAmount(transaction) | number: "1.0-4":this.locale }}
+      <div [ngClass]="{fg_green: !isAmountNegative(transaction), fg_red: isAmountNegative(transaction)}">
+        {{getAmount(transaction) | number: "1.0-4":this.locale }}
+      </div>
     </mat-cell>
   </ng-container>
 
@@ -103,7 +105,7 @@
   *ngIf="paginationEnabled"
   #paginator
   [pageSize]="10"
-  [pageSizeOptions]="[10, 20, 500]"
+  [pageSizeOptions]="[10, 20, 50]"
   [showFirstLastButtons]="true"
 >
 </mat-paginator>
