--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,44 +1,46 @@
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-    <div class="logo">
-        <img src="assets/images/logos/logo_white.png" class="logo-unfolded">
-        <img src="assets/images/logos/icon_white.png" class="logo-folded">
-    </div>
+  <div class="logo">
+    <img src="assets/images/logos/logo_white.png" class="logo-unfolded">
+    <img src="assets/images/logos/icon_white.png" class="logo-folded">
+    <small class="logo-unfolded">{{getVersion()}}</small>
+  </div>
 
-    <div class="buttons">
+  <div class="buttons">
 
-        <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-lg>
-            <mat-icon class="secondary-text">menu</mat-icon>
-        </button>
+    <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-lg>
+      <mat-icon class="secondary-text">menu</mat-icon>
+    </button>
 
-        <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-md>
-            <mat-icon class="secondary-text">arrow_back</mat-icon>
-        </button>
+    <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-md>
+      <mat-icon class="secondary-text">arrow_back</mat-icon>
+    </button>
 
-    </div>
+  </div>
 
 </div>
 
 
 <div class="navbar-scroll-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground" fusePerfectScrollbar
-    [fusePerfectScrollbarOptions]="{suppressScrollX: true}">
+     [fusePerfectScrollbarOptions]="{suppressScrollX: true}">
 
-    <div *ngIf="selectedAccount" class="user" fxLayout="column"
-        [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
+  <div *ngIf="selectedAccount" class="user" fxLayout="column"
+       [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">{{ selectedAccount.accountRS }}</div>
-        <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type !== 'offline'">
-          <span [routerLink]="['set-account-info']">{{ getAccountName() }}</span>
-        </div>
-        <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type === 'offline'">
-          <span>{{'hint_offline_account' | i18n}}</span>
-        </div>
-        <div class="avatar-container fuse-navy-700"><img class="avatar" [routerLink]="['request']" [src]="selectedAccountQRCode"></div>
+    <div class="h3 username">{{ selectedAccount.accountRS }}</div>
+    <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type !== 'offline'">
+      <span [routerLink]="['set-account-info']">{{ getAccountName() }}</span>
     </div>
-
-    <div class="navbar-content">
-        <fuse-navigation class="material2" layout="vertical"></fuse-navigation>
+    <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type === 'offline'">
+      <span>{{'hint_offline_account' | i18n}}</span>
     </div>
+    <div class="avatar-container fuse-navy-700"><img class="avatar" [routerLink]="['request']"
+                                                     [src]="selectedAccountQRCode"></div>
+  </div>
+
+  <div class="navbar-content">
+    <fuse-navigation class="material2" layout="vertical"></fuse-navigation>
+  </div>
 
 </div>
 
