--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -48,7 +48,9 @@
       <mat-icon>local_atm</mat-icon>
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
-      {{getAmount(transaction) | number: "1.0-8" }}
+      <div [ngClass]="{fg_green: !isAmountNegative(transaction), fg_red: isAmountNegative(transaction)}">
+        {{getAmount(transaction) | number: "1.0-4":this.locale }}
+      </div>
     </mat-cell>
   </ng-container>
 
@@ -58,7 +60,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       {{
-      convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-8"
+      convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-4":this.locale
       }}
     </mat-cell>
   </ng-container>
@@ -70,7 +72,7 @@
     <mat-cell *matCellDef="let transaction">
       <ng-container *ngIf="isOwnAccount(transaction.senderRS)">
         <a *ngIf="!isMultiOutPayment(transaction)"
-          [routerLink]="['/account', transaction.recipient]">{{
+           [routerLink]="['/account', transaction.recipient]">{{
           transaction.recipientRS
           }}</a>
         <div *ngIf="isMultiOutPayment(transaction)">
@@ -95,14 +97,15 @@
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns" [class]="row.confirmations ? 'confirmed': 'unconfirmed'"></mat-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns"
+           [class]="row.confirmations ? 'confirmed': 'unconfirmed'"></mat-row>
 </mat-table>
 
 <mat-paginator
   *ngIf="paginationEnabled"
   #paginator
   [pageSize]="10"
-  [pageSizeOptions]="[10, 20, 500]"
+  [pageSizeOptions]="[10, 20, 50]"
   [showFirstLastButtons]="true"
 >
 </mat-paginator>
