--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -1,18 +1,15 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
-  <mat-form-field appearance="outline">
-    <input matInput prefix="BURST-" burstInputValidator [patterns]="burstAddressPatternRef" mask="____-____-____-_____"
-           [dropSpecialCharacters]="false" [showMaskTyped]="true" [(ngModel)]="recipientAddress" name="recipientAddress"
-           placeholder="{{ 'recipient' | i18n }}">
-  </mat-form-field>
+
+  <burst-recipient-input (recipientChange)="onRecipientChange($event)"></burst-recipient-input>
 
   <mat-grid-list cols="2" rowHeight="85px" gutterSize="10px">
     <mat-grid-tile>
-      <mat-form-field appearance="outline">
+      <mat-form-field>
         <input matInput [(ngModel)]="amountNQT" name="amountNQT" placeholder="{{ 'amount' | i18n }}">
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile *ngIf="feeNQT">
-      <mat-form-field appearance="outline">
+      <mat-form-field>
         <input matInput [(ngModel)]="feeNQT" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
       </mat-form-field>
     </mat-grid-tile>
@@ -23,36 +20,36 @@
   <mat-checkbox (click)="showMessage=!showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
 
   <div *ngIf="showMessage">
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <textarea matInput [(ngModel)]="message" name="message" placeholder="{{ 'message' | i18n }}"></textarea>
     </mat-form-field>
     <mat-checkbox [(ngModel)]="encrypt" name="encrypt">{{ "encrypt_message" | i18n }}</mat-checkbox>
   </div>
 
   <div *ngIf="advanced">
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <label>{{ 'deadline_hours' | i18n }}</label>
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
     </mat-form-field>
 
-<!--    FUTURE FEATURE-->
-<!--
-    <mat-form-field appearance="outline">
-      <input matInput [(ngModel)]="fullHash" name="fullHash"
-             placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
-    </mat-form-field>
+    <!--    FUTURE FEATURE-->
+    <!--
+        <mat-form-field >
+          <input matInput [(ngModel)]="fullHash" name="fullHash"
+                 placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
+        </mat-form-field>
 
-    <mat-checkbox [(ngModel)]="broadcast" name="broadcast" disabled>{{ "do_not_broadcast" | i18n }}</mat-checkbox>
-    <br/>
+        <mat-checkbox [(ngModel)]="broadcast" name="broadcast" disabled>{{ "do_not_broadcast" | i18n }}</mat-checkbox>
+        <br/>
 
-    <mat-checkbox [(ngModel)]="note" name="note" disabled>{{ "add_note_to_self_q" | i18n }}</mat-checkbox>
+        <mat-checkbox [(ngModel)]="note" name="note" disabled>{{ "add_note_to_self_q" | i18n }}</mat-checkbox>
 
-    <div *ngIf="note">
-      <mat-form-field appearance="outline">
-        <textarea matInput [(ngModel)]="note_text" name="note_text" placeholder="{{ 'note' | i18n }}"></textarea>
-      </mat-form-field>
-    </div>
--->
+        <div *ngIf="note">
+          <mat-form-field >
+            <textarea matInput [(ngModel)]="note_text" name="note_text" placeholder="{{ 'note' | i18n }}"></textarea>
+          </mat-form-field>
+        </div>
+    -->
   </div>
 
   <div class="send-button-wrapper">
