using burst-recipients component in multi out, items deletable now

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
@@ -7,6 +7,25 @@ form {
     margin:20px 0;
 }
 
+.recipients-item{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+
+  burst-recipient-input{
+    margin-right: 8px;
+    width: 70%;
+  }
+
+  mat-form-field{
+    width:30%
+  }
+
+  mat-icon {
+    cursor: pointer;
+  }
+}
+
 .add-recipient {
     width:100%;
 }
