make validation badge fits into input

--- a/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <div fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
+  <div class="container" fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
     <input matInput
            [(ngModel)]="recipient"
            (ngModelChange)="applyRecipientType($event)"
