--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
                 <div [ngClass.gt-md]="'font-size-54'" class="font-size-30 font-weight-300 line-height-1 mt-8">
                   <app-balance-diagram
                     [account]="account"
-                    [transactionCountLimit]="50"
+                    [transactionCount]="50"
                   ></app-balance-diagram>
                 </div>
               </div>
