--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.scss
@@ -17,7 +17,7 @@
     flex-direction: row;
     justify-content: flex-end;
     mat-form-field{
-      width: 25%;
+      width: 80px;
       font-size: 12px
     };
   }
