changed curving...maybe nicer

--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -9,7 +9,9 @@
                            [showYAxisLabel]="options.showYAxisLabel"
                            [scheme]="options.colorScheme"
                            [gradient]="options.gradient"
+                           [curve]="options.curve"
                            (select)="onSelect($event)"
+
     >
       <ng-template #tooltipTemplate let-model="model">
         <app-balance-diagram-tooltip
