--- a/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
@@ -3,7 +3,7 @@
         Generate Passphrase
     </h2>
     <div class="pin-container">
-        <div class="seed__area" (mousemove)="movement($event)"></div>
+        <div class="seed__area" (mousemove)="movement($event)" (click)="handleClick($event)"></div>
         <mat-progress-bar mode="determinate" [value]="this.progress"></mat-progress-bar>
         <small class="seed__legend">Move your mouse across the area to create a random seed for the password generation.</small>
     </div>
