--- a/web/angular-wallet/src/app/main/send-burst/warn-send-dialog/warn-send-dialog.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/warn-send-dialog/warn-send-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="warn-dialog">
   <h1 mat-dialog-title>Non-valid Recipients Detected</h1>
   <div mat-dialog-content>
-    <p>The following recipients could not be validated:</p>
+    <p>The following recipient(s) could not be validated:</p>
     <ul class="recipient-list">
       <li *ngFor="let recipient of recipients">
         <div>
@@ -9,10 +9,11 @@
         </div>
       </li>
     </ul>
-    <p>Do you you really want to send Burst to them?</p>
+    <p *ngIf="!hasUnknownAliasAccount">Do you you really want to send Burst to them?</p>
   </div>
   <div mat-dialog-actions>
-    <button mat-button [mat-dialog-close]>No, Thanks</button>
-    <button mat-button [mat-dialog-close]="true" color="accent">Yes, I'm sure!</button>
+    <button *ngIf="hasUnknownAliasAccount" mat-button [mat-dialog-close]>Ok, Thanks</button>
+    <button *ngIf="!hasUnknownAliasAccount" mat-button [mat-dialog-close]>No, Thanks</button>
+    <button *ngIf="!hasUnknownAliasAccount" mat-button [mat-dialog-close]="true" color="accent">Yes, I'm sure!</button>
   </div>
 </div>
