--- a/web/angular-wallet/src/app/app.component.html
+++ b/web/angular-wallet/src/app/app.component.html
@@ -4,4 +4,11 @@
 </ng-container>
 
 <notifier-container></notifier-container>
-<div *ngIf="isScanning" class="downloading">{{ 'downloading_blockchain' | i18n }}</div>
+
+<button *ngIf="newVersionAvailable" mat-icon-button class="warn mat-elevation-z2 announcement-hint"
+        (click)="onClickedNewVersion()">
+  <mat-icon>announcement</mat-icon>
+</button>
+
+
+<!--<div *ngIf="isScanning" class="downloading">{{ 'downloading_blockchain' | i18n }}</div>-->
